--- a/style.css
+++ b/style.css
@@ -3,8 +3,7 @@
   padding: 0;
   list-style: none;
   text-decoration: none;
-}
-
+} */
 #container{
   width: 84%;
   max-width: 1280px;
@@ -61,12 +60,41 @@ main{
       padding: 1rem;
       margin-bottom: 2rem;
       background: #FFF;
+      <h1>なんかよく分かんない感じです</h1>
+<h4>brなし</h4>
+<P>
+  本文｜あー
+  本文｜いー
+</P>
+<h4>brあり</h4>
+<P>
+  本文｜うううう<br>
+  本文｜ええええ<br>
+</P>
+<h1>これで合ってますか？</h1>
+<h4>UL：Unordered List</h4>
+<ul>
+   <li>項目あ</li>
+   <li>項目い</li>
+   <li>項目う</li>
+</ul>
+<h4>OL：Ordered List</h4>
+<ol>
+ <li>項目え</li>
+  <li>項目お</li>
+  <li>項目か</li>
+</ol>
     }
 
   aside{
     flex: 1;
     padding: 3rem;
     background: #DDD;
+    <h1>関連リンク</h1>
+<ul>
+  <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
+  <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
+</ul>
   }
 
 footer {
