--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+/*   
 *{
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
-} */
+}
+ */
 #container{
   width: 84%;
   max-width: 1280px;
