--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*   
+/*
 *{
   margin: 0;
   padding: 0;
@@ -58,45 +58,105 @@ main{
   }
 
     article{
+      <h1>PとBR(改行の違い)</h1>
+<h4>brなし</h4>
+<P>
+  本文｜適当に文章を書いて下さい。
+  本文｜適当に文章を書いて下さい。
+</P>
+<h4>brあり</h4>
+<P>
+  本文｜適当に文章を書いて下さい。<br>
+  本文｜適当に文章を書いて下さい。<br>
+</P>
+
+     <article>
+<h1>様々なリスト表示</h1>
+<h4>UL：Unordered List</h4>
+<ul>
+   <li>項目1</li>
+   <li>項目2</li>
+   <li>項目3</li>
+</ul>
+<h4>OL：Ordered List</h4>
+<ol>
+ <li>項目1</li>
+  <li>項目2</li>
+  <li>項目3</li>
+</ol>
       min-height: 8rem;
       padding: 1rem;
       margin-bottom: 2rem;
       background: #FFF;
-      <h1>なんかよく分かんない感じです</h1>
-<h4>brなし</h4>
-<P>
-  本文｜あー
-  本文｜いー
-</P>
-<h4>brあり</h4>
-<P>
-  本文｜うううう<br>
-  本文｜ええええ<br>
-</P>
-<h1>これで合ってますか？</h1>
-<h4>UL：Unordered List</h4>
-<ul>
-   <li>項目あ</li>
-   <li>項目い</li>
-   <li>項目う</li>
-</ul>
-<h4>OL：Ordered List</h4>
-<ol>
- <li>項目え</li>
-  <li>項目お</li>
-  <li>項目か</li>
-</ol>
     }
 
+    article
+      <h1>Sample Video</h1>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/d6yt9WiaUvQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    /article
+
+    article
+      <h1>Sample Image</h1>
+      <img src="images/sample.jpg" width="480" alt="サンプル">
+    /article
+
+    article
+      <h1>表組み</h1>
+        <table  border="1" rules="all">
+            <thead>
+                 <tr>
+                      <th>商品</th>
+                      <th>価格</th>
+                 </tr>
+            </thead>
+            <tfoot>
+                 <tr>
+                      <td>合計金額</td>
+                      <td>250円</td>
+                 </tr>
+            </tfoot>
+            <tbody>
+                 <tr>
+                      <td>鉛筆</td>
+                      <td>150円</td>
+                 </tr>
+                 <tr>
+                      <td>消しゴム</td>
+                      <td>100円</td>
+                 </tr>
+            </tbody>
+        </table>
+    /article
+
+    article
+      <h1>Sample Form</h1>
+      <form action="http://www.google.com/search" method="get">
+        <label >Google: </label>
+        <input type="search" name="q">
+      </form>
+    /article
+
+
+
+
+
+
+
+
+
+
+
+
   aside{
-    flex: 1;
-    padding: 3rem;
-    background: #DDD;
     <h1>関連リンク</h1>
 <ul>
   <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
   <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
 </ul>
+
+    flex: 1;
+    padding: 3rem;
+    background: #DDD;
   }
 
 footer {
