--- a/style.css
+++ b/style.css
@@ -1,11 +1,10 @@
-/*
 *{
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
 }
- */
+
 #container{
   width: 84%;
   max-width: 1280px;
@@ -18,6 +17,7 @@ header {
    height: 8rem;
    background: #333;
    box-shadow: 0 4px 0.3125rem rgba(0,0,0,.3);
+   color: #24859b;
  }
 
   header h1{
@@ -58,13 +58,102 @@ main{
   }
 
     article{
+      <h1>PとBR(改行の違い)</h1>
+<h4>brなし</h4>
+<P>
+  本文｜適当に文章を書いて下さい。
+  本文｜適当に文章を書いて下さい。
+</P>
+<h4>brあり</h4>
+<P>
+  本文｜適当に文章を書いて下さい。<br>
+  本文｜適当に文章を書いて下さい。<br>
+</P>
+
+     <article>
+<h1>様々なリスト表示</h1>
+<h4>UL：Unordered List</h4>
+<ul>
+   <li>項目1</li>
+   <li>項目2</li>
+   <li>項目3</li>
+</ul>
+<h4>OL：Ordered List</h4>
+<ol>
+ <li>項目1</li>
+  <li>項目2</li>
+  <li>項目3</li>
+</ol>
       min-height: 8rem;
       padding: 1rem;
       margin-bottom: 2rem;
       background: #FFF;
     }
 
+    article
+      <h1>Sample Video</h1>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/d6yt9WiaUvQ" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    /article
+
+    article
+      <h1>Sample Image</h1>
+      <img src="images/sample.jpg" width="480" alt="サンプル">
+    /article
+
+    article
+      <h1>表組み</h1>
+        <table  border="1" rules="all">
+            <thead>
+                 <tr>
+                      <th>商品</th>
+                      <th>価格</th>
+                 </tr>
+            </thead>
+            <tfoot>
+                 <tr>
+                      <td>合計金額</td>
+                      <td>250円</td>
+                 </tr>
+            </tfoot>
+            <tbody>
+                 <tr>
+                      <td>鉛筆</td>
+                      <td>150円</td>
+                 </tr>
+                 <tr>
+                      <td>消しゴム</td>
+                      <td>100円</td>
+                 </tr>
+            </tbody>
+        </table>
+    /article
+
+    article
+      <h1>Sample Form</h1>
+      <form action="http://www.google.com/search" method="get">
+        <label >Google: </label>
+        <input type="search" name="q">
+      </form>
+    /article
+
+
+
+
+
+
+
+
+
+
+
+
   aside{
+    <h1>関連リンク</h1>
+<ul>
+  <li><a href="https://www.kyusan-u.ac.jp">九州産業大学</a></li>
+  <li><a href="https://www.example.com">EXAMPLE.COM</a></li>
+</ul>
+
     flex: 1;
     padding: 3rem;
     background: #DDD;
