--- a/style.css
+++ b/style.css
@@ -136,17 +136,6 @@ main{
       </form>
     /article
 
-
-
-
-
-
-
-
-
-
-
-
   aside{
     <h1>関連リンク</h1>
 <ul>
@@ -164,4 +153,19 @@ footer {
   text-align: center;
   background: #333;
   color: white;
+}
+
+.youtube {
+    position: relative;
+    padding-bottom: 56.25%; /* 16:9の場合*/
+    height: 0;
+    overflow: hidden;
+}
+
+.youtube iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
 }
