--- a/style.css
+++ b/style.css
@@ -1,11 +1,25 @@
-/*
+/*-------------------------------
+               BASE
+--------------------------------*/
+
+
 *{
   margin: 0;
   padding: 0;
   list-style: none;
   text-decoration: none;
 }
- */
+
+body {
+  font-family: sans-serif;
+  font-size: 16px;
+  background-color: silver;
+}
+
+/*-------------------------------
+         LAYOUT MOBILE
+--------------------------------*/
+
 #container{
   width: 84%;
   max-width: 1280px;
@@ -79,4 +93,52 @@ footer {
   text-align: center;
   background: #333;
   color: white;
+}
+
+/*-------------------------------
+      LAYOUT PC (OverWrite)
+--------------------------------*/
+
+@media only screen and (min-width: 769px) {
+
+  header {
+    height: 7rem;
+  }
+  header h1 {
+    top: 2.5rem;
+    left: 0rem;
+    width: 100%;
+    text-align: center;
+    font-size: 1.5rem;
+  }
+
+  #lists {
+    flex-direction: row;
+    justify-content: space-between;
+    top: 7rem;
+    left: 0;
+  }
+  #lists li {
+    flex:1;
+    border-bottom: none;
+    border-right: 1px solid #777;
+  }
+  #lists li:last-child {
+    border-right: none;
+  }
+
+  main {
+    flex-direction: row;
+  }
+  article {
+    flex: 3;
+    padding: 3rem;
+    font-size: 1rem;
+  }
+  aside {
+    flex: 1;
+    padding: 3rem;
+    font-size: 1rem;
+  }
+
 }
